修改yii虚拟主机配置

--- a/php-learn/app/route.html
+++ b/php-learn/app/route.html
@@ -1,6 +1,6 @@
 接口 http://localhost/app/user/info 调用流程
 
-1. 去除index.php
+1. 去除index.php (参考 yii-host.html)
 apache的.htaccess文件重写路由
 
 Options +FollowSymLinks
