--- a/php-learn/frame/yii/yii-intro.html
+++ b/php-learn/frame/yii/yii-intro.html
@@ -17,12 +17,16 @@ http://www.yiichina.com/download 下载Yii模板
 
 测试访问地址 (http://dev.yii.com)
 
+
+
 安装Yii高级模板
 http://www.yiichina.com/download 下载Yii模板
 
 解压并复制到指定的目录
 
 执行 init.bat (输入一 开发模式 yes)
+问题 the openssl php extension is required by yii2
+开启openssl  extension=php_openssl.dll  重启apache
 
 上传代码 (先关注)
 
