--- a/nginx-learn/basic/random_index.html
+++ b/nginx-learn/basic/random_index.html
@@ -12,5 +12,10 @@ location / {
 	random_index on;
 	#index index.html index.htm;
 }
+
 sudo nginx -tc /etc/nginx/conf.d/default.conf
+sudo nginx -s reload #服务器
 sudo service nginx restart
+
+res 目录下准备三个文件
+self.res.com
