--- a/nginx-learn/basic/sub_module.html
+++ b/nginx-learn/basic/sub_module.html
@@ -16,13 +16,14 @@ default sub_filter_once on;
 context http, server, location
 
 location / {
-	root /...;
+	root /var/www/res;
 	index index.html index.html;
 	sub_filter '<a>imooc' '<a>IMOOC'; #默认替换第一个
 	sub_filter_once off; #替换所有
 }
 
 sudo nginx -tc /etc/nginx/conf.d/default.conf
+sudo nginx -s reload #服务器
 sudo service nginx restart
 
 self.res.com/submodule.html
