--- a/nginx-learn/basic/sub_status.html
+++ b/nginx-learn/basic/sub_status.html
@@ -12,8 +12,9 @@ location /mystatus {
 }
 
 sudo nginx -tc /etc/nginx/conf.d/default.conf 检测语法是否合法
-sudo nginx -s reload
+sudo nginx -s reload #服务器
 sudo service nginx restart
+
 self.res.com/mystatus
 Active connections: 4 
 server accepts handled requests
@@ -22,3 +23,8 @@ Reading: 0 Writing: 1 Waiting: 3
 
 4(握手数)  4(连接数)  1(并发数)
 
+
+Active connections: 1 
+server accepts handled requests
+ 74263 74263 104257 
+Reading: 0 Writing: 1 Waiting: 0 
