--- a/php-learn/swoole/ws_client.html
+++ b/php-learn/swoole/ws_client.html
@@ -7,7 +7,7 @@
 <body>
 <h1>测试</h1>
 <script>
-    var wsServer = 'ws://dev.blockasia.io:9502';
+    var wsServer = 'ws://dev.blockasia.io/websocket';
     var websocket = new WebSocket(wsServer);
     console.log(websocket);
     websocket.onopen = function (evt) {
