--- a/go-learn/basic/3.html
+++ b/go-learn/basic/3.html
@@ -243,3 +243,18 @@ for {
       fmt.Println(“”, i)
       i++;
 }
+
+for i := 0; i<7 ; i++ {       if i%2 == 0 { 
+             continue 
+        } 
+         fmt.Println(i)
+} 
+
+函数
+1. 声明语法 func 函数名(参数列表)[(返回值列表)]()
+func add() {}
+func add(a int, b int) {}
+func add(a int, b int) int {}
+func add(a int, b int) (int, int) {}
+func add(a, b int)(int, int) {}
+
