--- a/go-learn/basic/3.html
+++ b/go-learn/basic/3.html
@@ -258,3 +258,199 @@ func add(a int, b int) int {}
 func add(a int, b int) (int, int) {}
 func add(a, b int)(int, int) {}
 
+函数特点
+a. 不支持重载 一个包不能有两个名字一样的函数
+b. 函数是一等公民 函数也是一种类型 一个函数可以赋值给变量
+c. 匿名函数
+d. 多返回值 
+
+package main
+
+import "fmt"
+
+func add(a, b int) int {
+	return a + b
+}
+
+func main() {
+
+	c := add
+	fmt.Println(c)
+
+	sum := c(10, 20)
+	fmt.Println(sum)
+       if ( c == add ) {
+               fmt.Println(“c equal add”)
+       }
+}
+
+
+package main
+
+import "fmt"
+
+type add_func func(int, int) int
+
+func add(a, b int) int {
+	return a + b
+}
+
+func operator(op add_func, a int, b int) int {
+	return op(a, b)
+}
+
+func main() {
+	c := add
+	fmt.Println(c)
+	sum := operator(c, 100, 200)
+	fmt.Println(sum)
+}
+
+package main
+
+import "fmt"
+
+type add_func func(int, int) int
+
+func add(a, b, c int) int {
+	return a + b
+}
+
+func operator(op add_func, a int, b int) int {
+	return op(a, b)
+}
+
+func main() {
+	c := add
+	fmt.Println(c)
+	sum := operator(c, 100, 200)
+	fmt.Println(sum)
+}
+
+package main
+
+import "fmt"
+
+type add_func func(int, int) int
+
+func sub(a, b int) int {
+	return a - b
+}
+
+func operator(op add_func, a int, b int) int {
+	return op(a, b)
+}
+
+func main() {
+	c := sub
+	fmt.Println(c)
+	sum := operator(c, 100, 200)
+	fmt.Println(sum)
+}
+
+函数参数传递方式
+值传递 引用传递
+注意1：无论是值传递，还是引用传递，传递给函数的都是变量的副本，
+不过，值传递是值的拷贝。引用传递是地址的拷贝，一般来说，地址
+拷贝更为高效。而值拷贝取决于拷贝的对象大小，对象越大，则性能越低
+
+函数参数传递方式
+注意2 map slice chan 指针 interface默认以引用的方式传递
+package main
+
+import "fmt"
+
+func modify(a int) {
+	a = 100
+}
+
+func main() {
+	a := 8
+	fmt.Println(a)
+	modify(a)
+	fmt.Println(a)
+}
+练习13 修改上一页的程序 使其功能正确
+
+命名返回值的名字
+func add(a, b int) (c int) {
+        c = a + b
+        return}
+
+
+func calc(a, b int) (sum int, avg int) {
+        sum = a + b
+        avg = (a +b)/2
+        return}
+ 
+_标识符 用来忽略返回值 
+func calc(a, b int) (sum int, avg int) {
+        sum = a + b
+        avg = (a +b)/2
+        return}
+func main() {
+      sum, _ := calc(100, 200)
+}
+
+可变参数
+func add(arg*** int) int {} //0个或多个参数
+func add(a int, arg*** int) int {} // 1个或多个参数
+func add(a int, b int, arg*** int) int {} // 2个或多个参数
+    注意：其中arg是一个slice，我们可以通过arg[index]依次访问所有参数
+  通过len(arg)来判断传递参数的个数
+
+可变参数
+练习14 写一个函数add 支持1个或多个int相加 并返回相加结果
+练习15 写一个函数concat 支持1个或多个string相拼接 并返回结果
+
+defer用途
+1. 当函数返回时，执行defer语句。因此，可以用来做资源清理
+2. 多个defer语句，按先进后出的方式执行
+3. defer语句中的变量，在defer声明时就决定了
+
+func a() {
+          i := 0
+          defer fmt.Println(i)
+          i++
+          return
+} 
+
+func f() {
+            for i := 0; i < 5; i++ {
+                    defer fmt.Printf(“%d “, i)
+            } 
+} 
+
+关闭文件句柄
+func read() {
+file := open(filename)
+defer file.Close()
+
+//文件操作
+}
+
+锁资源释放
+func read() {
+mc.Lock()
+defer mc.Unlock()
+//其他操作
+}
+
+数据库连接释放
+func read() {
+conn := openDatabase()
+defer conn.Close()
+//其他操作
+}
+
+1.编写程序，在终端输出九九乘法表。
+
+2.  一个数如果恰好等于它的因子之和，这个数就称为“完数”。例如6=1＋2＋3.
+编程找出1000以内的所有完数。
+
+3.  输入一个字符串，判断其是否为回文。回文字符串是指从左到右读和从右到
+左读完全相同的字符串。
+4.输入一行字符，分别统计出其中英文字母、空格、数字和其它字符的个数。
+5. 计算两个大数相加的和，这两个大数会超过int64的表示范围.
+  
+
