--- a/go-learn/basic/prog.html
+++ b/go-learn/basic/prog.html
@@ -7,3 +7,15 @@ narc.go
 
 3. 对于一个数n 求n的阶乘之和 1! + 2! + 3! + ... + n!
 factorial.go
+
+4. 九九乘法表
+multi.go
+
+5. 一个数恰好等于它的因子之后 称为完数 如 6 = 1 + 2 + 3
+end.go
+
+6. 输入一个字符串 判断其是否为回文 回文字符串是指从左到右读完全相同的字符串
+palindr.go
+
+7. 输入一行字符 分别统计出其中英文字母 空格 数字和其它字符的个数
+count.go
