--- a/go-learn/basic/prog.html
+++ b/go-learn/basic/prog.html
@@ -19,3 +19,18 @@ palindr.go
 
 7. 输入一行字符 分别统计出其中英文字母 空格 数字和其它字符的个数
 count.go
+
+8. 计算两个大数相加的和 这两个大数会超过int64的表示范围
+int64.go
+
+9. 冒泡排序
+bubble.go
+
+10. 插入排序
+insert.go
+
+11. 选择排序
+select.go
+
+12. 快速排序
+fast.go
