添加时间处理

--- a/go-learn/basic/time.html
+++ b/go-learn/basic/time.html
@@ -18,5 +18,9 @@ now := time.Now()
 fmt.Println(now.Format("02/1/2006 15:05"))
 fmt.Println(now.Format("2006/1/02 15:04"))
 fmt.Println(now.Format("2006/1/02"))
-练习6：写一个程序，获取当前时间，并格式化成 2017/06/15 08:05:00形式
-练习7：写一个程序，统计一段代码的执行耗时，单位精确到微秒。
+
+练习 写一个程序 获取当前时间 并格式化成 2017/06/15 08:05:00形式
+curr_time.go
+
+练习 写一个程序 统计一段代码的执行耗时 单位精确到微秒
+micro.go
