--- a/go-learn/basic/finger.html
+++ b/go-learn/basic/finger.html
@@ -5,6 +5,8 @@
 4. 获取指针类型所指向的值，使用：*，比如：var *p int, 使用*p获取p指向的值
 var a int = 5
 var p *int = &a
-练习8：写一个程序，获取一个变量的地址，并打印到终端
-练习9：写一个函数，传入一个int类型的指针，并在函数中修改所指向的值。
+
+写一个程序，获取一个变量的地址，并打印到终端
+
+写一个函数，传入一个int类型的指针，并在函数中修改所指向的值。
 在main函数中调用这个函数，并把修改前后的值打印到终端，观察结果
