--- a/python-learn/basic/intro.html
+++ b/python-learn/basic/intro.html
@@ -38,3 +38,41 @@ bool检测 if.py
 star.py 打印不同图案
 
 计算学生成绩 student.py
+
+计算两个矩阵的乘积 matr.py
+
+
+字符串 string.py
+
+回文检索 palin.py
+
+单词计数 count.py
+
+函数 func.py
+
+默认参数 param.py
+
+
+文件操作 file.py
+
+拷贝文件 copy.py
+
+文件信息统计 statist.py
+
+使用with处理文件对象 with.py (lscpu查看cpu信息)
+
+
+异常
+try.py
+
+
+对象 object.py
+
+装饰器 account.py
+
+
+迭代器 iter.py
+
+生成器 gen.py
+
+装饰器 deco.py
